[package]
name = "merged_lands"
version = "0.1.4"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
# Command line interface.
clap = { version = "4.5", features = ["derive"] }
wild = "2.2"

# Serialization for meta files to fine tune merge on each plugin.
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.5.11"

# Support for bitfields.
bitflags = "1.3.2"

# Utilities.
itertools = "0.10.5"                                       # collect_vec, sorted_by, sorted_by_key
const-default = { version = "1.0", features = ["derive"] }

# Faster performance.
hashbrown = "0.14.5"

# For formatted date time in the generated ESP description.
time = { version = "0.3.47", features = ["formatting"] }

# Error messages, logging, colored output.
simplelog = "0.12.2"
log = "0.4.29"
anyhow = "1.0.102"
owo-colors = "3.5.0"

# Used when parsing the Morrowind.ini file.
regex = "1.12.3"

# Used when parsing openmw.cfg (OpenMW configuration files).
openmw-config = "1.0.1"

# Needed for cross-platform file operations.
filesize = "0.2.0"  # For byte size used in ESP dependencies.
filetime = "0.2.27" # For last modified time used in sorting.

# For producing images of terrain.
image = { version = "0.24.9", default-features = false, features = ["png"] }

# Parsing and writing ESPs.
[dependencies.tes3]
#path = "../tes3"
git = "https://github.com/Greatness7/tes3"
rev = "c5dd8d261372b4d1677ae9ee3aba13442820e907"
default-features = false
features = ["esp"]
